[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gymnasium_env", "src/cliff_walking_rp"]

[project]
name = "cliff-walking-rp"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "gymnasium",
  "numpy",
  "matplotlib",
  "pygame>=2.1.3",
  "pre-commit",
]

[project.scripts]
cliff-walking-rp = "cliff_walking_rp.cli:main"
